{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 784,
  "lineage": "9032b01f-962d-b202-05c9-632dd7000ade",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f43c08d51f14ecb0",
            "arn": "arn:aws:ec2:us-east-1:557017828051:instance/i-0480c2312f41fc2ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lex_monolith_ec2_role-20240508144045272600000002",
            "id": "i-0480c2312f41fc2ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0accff136e8ebba79",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0515363379c0e9295",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022558df13debcc73",
            "tags": {
              "Name": "LexMonolith"
            },
            "tags_all": {
              "Name": "LexMonolith"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "LexMonolith"
            },
            "vpc_security_group_ids": [
              "sg-00b2f8affc50563c3"
            ]
          },
          "dependencies": [
            "data.aws_ami.selected",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:network-acl/acl-06596a3aa40e1cad5",
            "default_network_acl_id": "acl-06596a3aa40e1cad5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06596a3aa40e1cad5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "557017828051",
            "subnet_ids": [
              "subnet-01084424865ddc0c7",
              "subnet-022558df13debcc73"
            ],
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:route-table/rtb-09106948611a02abc",
            "default_route_table_id": "rtb-09106948611a02abc",
            "id": "rtb-09106948611a02abc",
            "owner_id": "557017828051",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:security-group/sg-00b2f8affc50563c3",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-00b2f8affc50563c3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "557017828051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-default",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09952407d9e32ff91",
            "arn": "arn:aws:ec2:us-east-1:557017828051:elastic-ip/eipalloc-09952407d9e32ff91",
            "domain": "vpc",
            "id": "eipalloc-09952407d9e32ff91",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-84-96.compute-1.amazonaws.com",
            "public_ip": "3.215.84.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:internet-gateway/igw-046bfd1694da614fd",
            "id": "igw-046bfd1694da614fd",
            "owner_id": "557017828051",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09952407d9e32ff91",
            "association_id": "eipassoc-0f4b49f0f0828987f",
            "connectivity_type": "public",
            "id": "nat-07e7e1ce38c75019d",
            "network_interface_id": "eni-0bb6f220d754c0e09",
            "private_ip": "10.0.101.224",
            "public_ip": "3.215.84.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01084424865ddc0c7",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ad10f764775d61841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07e7e1ce38c75019d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad10f764775d6184",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046bfd1694da614fd",
            "id": "r-rtb-040d4b31f13b1ceb01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040d4b31f13b1ceb0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:route-table/rtb-0ad10f764775d6184",
            "id": "rtb-0ad10f764775d6184",
            "owner_id": "557017828051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-private-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-private-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:route-table/rtb-040d4b31f13b1ceb0",
            "id": "rtb-040d4b31f13b1ceb0",
            "owner_id": "557017828051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-public",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-public",
              "Owner": "lex",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e5009d13680d841",
            "route_table_id": "rtb-0ad10f764775d6184",
            "subnet_id": "subnet-022558df13debcc73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0855cb818c1c4db2b",
            "route_table_id": "rtb-040d4b31f13b1ceb0",
            "subnet_id": "subnet-01084424865ddc0c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:subnet/subnet-022558df13debcc73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022558df13debcc73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557017828051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-private-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-private-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:subnet/subnet-01084424865ddc0c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01084424865ddc0c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557017828051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc-public-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc-public-us-east-1a",
              "Owner": "lex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c169bf8feb87c3f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557017828051:vpc/vpc-0c169bf8feb87c3f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06596a3aa40e1cad5",
            "default_route_table_id": "rtb-09106948611a02abc",
            "default_security_group_id": "sg-00b2f8affc50563c3",
            "dhcp_options_id": "dopt-0b6352ab45d892f62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c169bf8feb87c3f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09106948611a02abc",
            "owner_id": "557017828051",
            "tags": {
              "Environment": "lab",
              "Name": "lex-vpc",
              "Owner": "lex",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "lex-vpc",
              "Owner": "lex",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}